# stockAppBackend

./: Dockerfile  alembic.ini  docker-compose.yaml  mypy.ini  pyproject.toml  readme.md
alembic/: env.py
alembic/versions/: 1ba07afa330a_init.py  24fd94c8d7c9_add_saved_stock.py  2f1650e30d53_add_split.py  5c5164f4a120_change_stocks.py  8204aeca159e_add_stock.py
app/: init_data.yaml  load_data.py  main.py
app/core/: .env.example  config.py
app/domains/entities/: __init__.py  saved_stock.py  sc_note.py  stock.py  stock_split.py  user.py
app/drivers/: security.py
app/drivers/api/: deps.py  urls.py
app/drivers/api/endpoints/: auth.py  login.py  stock.py
app/drivers/rdb/: __init__.py  base.py  init_db.py
app/drivers/rdb/models/: __init__.py  saved_stock.py  sc_note.py  stock.py  stock_split.py  user.py
app/interfaces/: __init__.py  saved_stock_repository.py  sc_note_repository.py  stock_repository.py  stock_split_repository.py  user_repository.py
app/interfaces/repo_interfaces/: __init__.py  saved_stock.py  sc_note.py  stock.py  stock_split.py
app/tests/: conftest.py
app/tests/api/: test_api_login.py  test_api_stock.py
app/tests/fixtures/: init_data.yaml
app/usecases/: __init__.py  stock_usecace.py  user_usecase.py
